@@ -5,12 +5,17 @@
 #ifdef WANT_XTI
 #ifndef lint
 char	nettest_xti_id[]="\
-@(#)nettest_xti.c (c) Copyright 1995-2007 Hewlett-Packard Co. Version 2.4.3";
+@(#)nettest_xti.c (c) Copyright 1995-2008 Hewlett-Packard Co. Version 2.4.5";
 #else
 #define DIRTY
 #define WANT_HISTOGRAM
 #define WANT_INTERVALS
 #endif /* lint */
+
+#ifdef WIN32
+#error XTI Interface tests are not available under Windows
+#endif
+
 /****************************************************************/
 /*								*/
 /*	nettest_xti.c						*/
@@ -40,18 +45,12 @@ char	nettest_xti_id[]="\
 
 #include <sys/types.h>
 #include <fcntl.h>
-#ifndef WIN32
 #include <sys/ipc.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <netdb.h>
 #include <errno.h>
 #include <signal.h>
-#else /* WIN32 */
-#include <process.h>
-#include <winsock2.h>
-#include <windows.h>
-#endif /* WIN32 */
 #include <stdio.h>
 #include <time.h>
 #include <malloc.h>
